# claude-speak

./: README.md  pyproject.toml
src/claude_speak/: config.py  main.py  norml.py  processor.py
